# KwaaiNet

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  Makefile  README.md  setup.sh  start-ui.ps1  start-ui.sh
.githooks/: pre-push
.github/workflows/: ci-kwaai-compute.yml  ci-kwaai-knowledge.yml  ci-kwaai-network.yml  ci-kwaai-platform.yml  ci-kwaai-storage.yml  ci-kwaai-trust.yml  ci.yml  release.yml  test-cuda-cache.yml
core/: Cargo.toml
core/crates/kwaai-cli/: Cargo.toml
core/crates/kwaai-cli/src/: block_rpc.rs  calibration.rs  circuit_breaker.rs  cli.rs  config.rs  daemon.rs  hf.rs  identity.rs  inference_mux.rs  llama_local.rs  main.rs  node.rs  ollama.rs  ollama_proxy.rs  p2p_cmd.rs  progress.rs  rag_api.rs  rag_cmd.rs  reputation.rs  reputation_cmd.rs  shard_api.rs  shard_cmd.rs  storage.rs  storage_rpc.rs  updater.rs  vpk.rs  vpk_bench.rs
core/crates/kwaai-compression/src/: quantization.rs  sparse.rs
core/crates/kwaai-distributed/src/: averaging.rs  coordinator.rs  expert.rs  moe.rs
core/crates/kwaai-inference/: Cargo.toml
core/crates/kwaai-inference/examples/: repe_inference.rs
core/crates/kwaai-inference/src/: engine.rs  lib.rs  loader.rs  mlx_shard.rs  model.rs  probe.rs  shard.rs
core/crates/kwaai-network-tests/tests/: 01_unit_dht.rs  02_unit_p2p.rs  03_unit_rpc.rs  06_network_bootstrap.rs
core/crates/kwaai-p2p-daemon/: build.rs
core/crates/kwaai-p2p-daemon/src/: client.rs  daemon.rs  hello.rs  lib.rs  persistent.rs  stream.rs
core/crates/kwaai-rag/: Cargo.toml
core/crates/kwaai-rag/src/: bm25.rs  chunker.rs  doc_schema.rs  document.rs  dream.rs  dream_tasks.rs  embedder.rs  enrich.rs  family.rs  graph.rs  hyde.rs  ingestion.rs  iterative.rs  lib.rs  meta_store.rs  ner.rs  obsidian.rs  prompt.rs  query_understand.rs  query_understanding.rs  reranker.rs  retriever.rs  scorer.rs  seed_json.rs  sequence.rs  summary.rs
core/crates/kwaai-rag/tests/: suite.rs
core/crates/kwaai-storage/: Cargo.toml
core/crates/kwaai-storage/examples/: vector_search_bench.rs
core/crates/kwaai-storage/src/: api.rs  db.rs  lib.rs  tenant.rs  vectors.rs
core/crates/kwaai-storage/tests/: api.rs  storage.rs
core/crates/map-server/src/: crawler.rs  main.rs  routes.rs
core/examples/: dht_node.rs  peer_discovery.rs  petals_dht.rs  petals_visible.rs  progress_demo.rs  query_dht.rs  query_dht_state.rs  tensor_exchange.rs
core/scripts/: compute_directions.py
docs/: DEBUGGING_MAP_VISIBILITY.md  METAL_PERFORMANCE_ANALYSIS.md  NODE_UI_PLANNING.md  TODO.md  WHITEPAPER.md  hnsw_vs_brute_force.md  storage-fabric-plan.md  user-journey.md
docs/vpk-shard-bench/: chart.py
plans/: d6-rag-accuracy-improvement.md
projects/kwaai-knowledge/: d6_accuracy_progress.md  d6_progress_chart.py
projects/kwaai-knowledge/plans/: AutoDeriveSeededFacts-plan.md  D6-eval-report-20260609.md  EnrichHallucination-fix-plan.md  dream-rag-research-log.md  hierarchical-summarization.md
scripts/: build.sh  hnsw_brute_chart.py  metal-perf-test.sh  patch-installer-cuda-ps1.sh  patch-installer-cuda.sh  rag_chunk_test.py  test-llama-local.sh  update-windows.ps1
systems/node-dashboard/: README.md  package-lock.json  package.json  run.sh
systems/node-dashboard/backend/: package-lock.json  package.json  server.js
systems/node-dashboard/frontend/: index.html  package-lock.json  package.json  vite.config.js
systems/node-dashboard/frontend/src/: App.jsx  index.css
systems/node-dashboard/frontend/src/components/: Config.jsx  Header.jsx  Identity.jsx  Logs.jsx  Network.jsx  SetupWizard.jsx  Status.jsx
tests/: d6_accuracy_progress.md  d6_doc_schema.yaml  d6_family_tree.yaml  p2p-ollama-relay-test.sh  storage-api-test.sh  storage-lan-test.sh  storage-multi-eve-test.sh
tests/kwaai-compute/: integration-test.sh
tests/kwaai-knowledge/: d6_accuracy_progress.md  d6_doc_schema.yaml  d6_eval_questions.json  d6_experiments_log.md  d6_family_tree.yaml  ordering_experiment_10pct.sh  ordering_experiment_1pct.sh  overnight_struct_coref_rel.sh
tests/kwaai-knowledge/results/: coref_D6_ordA_10pct_20260622_160446.md  coref_full_tier1_commit.md  d6_sequence_diagram.mmd  eval_D6_r12_graph_replace_20260614_203748.md  eval_D6_r15_smart_20260614_205932.md  eval_D6_r16_smart_v2_20260614_212403.md  eval_D6_r17_smart_t0_20260614_214526.md  eval_D6_r18b_smart_t0_20260615_115158.md  eval_D6_r29_postdream_20260616_141310.md  eval_D6_r30_postdream2_20260616_150501.md  eval_D6_r33_synth055_20260616_165708.md  eval_D6_r34_postdream4_20260616_183655.md  eval_D6_r35_postdream5_grandchildren_20260616_203211.md  eval_D6_r36_reingest_endnotes_20260616.md  eval_D6_r39b_20260617.md  eval_log.md  extract_relations_10pct_postcoref_postdedup_70b.md  extract_relations_5pct_postcoref_70b.md
tests/kwaai-network/results/: metrics.jsonl
tests/kwaai-platform/: platform_test.sh
tests/rag-bench/: README.md  questions.json  report.py  run_gemini.py  run_kwaainet.py  score.py
