[package]
name = "kwaainet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/Kwaai-AI-Lab/KwaaiNet"
homepage = "https://kwaai.ai"
description = "kwaainet – KwaaiNet node CLI"
default-run = "kwaainet"
keywords = ["ai", "p2p", "decentralized", "inference", "kwaainet"]
categories = ["command-line-utilities", "network-programming"]


[[bin]]
name = "kwaainet"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Config
serde_yaml = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# System monitoring
sysinfo = { workspace = true }

# Async
tokio = { workspace = true }
futures = { workspace = true }

# HTTP (IP detection, health check, update check)
reqwest = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Time
chrono = { version = "0.4", features = ["serde"] }

# P2P / DHT protocol
libp2p = { workspace = true }
prost = { workspace = true }
rmp-serde = { workspace = true }
unsigned-varint = { workspace = true }

# gRPC IPC surface — used by `kwaainet start` to host the in-process
# KwaaiNet service that the GUI / future CLI subcommands talk to.
tonic = { workspace = true }
kwaai-rpc = { workspace = true }
async-stream = "0.3"
# tokio-stream wraps UnixListener / mpsc::Receiver into the Stream impl
# that tonic's serve_with_incoming_shutdown / ReceiverStream expect.
tokio-stream = { version = "0.1", features = ["net"] }

# Not yet in workspace.dependencies
sha1 = "0.10"
hex = "0.4"
rmpv = "1.0"
half = { workspace = true }
unicode-width = "0.1"

# HTTP server (OpenAI API)
axum = { version = "0.7", features = ["json", "multipart"] }

# ML (needed for tensor ops in block_rpc and shard_cmd)
candle-core = { workspace = true }

# KwaaiNet crates
kwaai-p2p = { workspace = true }
kwaai-hivemind-dht = { workspace = true }
kwaai-p2p-daemon = { workspace = true }
kwaai-inference = { workspace = true }
kwaai-trust = { workspace = true }
kwaai-storage = { workspace = true, optional = true }
kwaai-rag = { workspace = true, optional = true, features = ["pdf"] }
uuid = { workspace = true, optional = true }

# Trust graph dependencies
dirs = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal", "process", "fs"] }

# llama.cpp local inference — auto-detects Metal (macOS), CUDA (Linux/Windows), or CPU.
llama-cpp-2 = { version = "0.1", optional = true }

# Enable Metal GPU acceleration on macOS (Apple Silicon / M-series).
# Cargo merges features from target-specific sections with the base [dependencies] entry.
[target.'cfg(target_os = "macos")'.dependencies]
kwaai-inference = { workspace = true, features = ["metal"] }

[package.metadata.dist]
features = ["storage"]

# Test-only deps. tempfile gives the gRPC server lifecycle tests a private
# HOME/KWAAINET_HOME so they don't touch the developer's real
# `~/.kwaainet/run/kwaai.sock`.
[dev-dependencies]
tempfile = "3"

[features]
default = ["storage", "rag"]
cuda = ["kwaai-inference/flash-attn"]
# cuda-windows: CUDA without flash-attn (flash-attn requires Linux nvcc and cannot build on Windows)
cuda-windows = ["kwaai-inference/cuda"]
llama-cpp = ["llama-cpp-2"]
storage = ["kwaai-storage", "uuid"]
rag = ["kwaai-rag", "uuid"]


