[package]
name = "kwaai-inference"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Inference engine for KwaaiNet - Candle-based ML runtime"
keywords = ["inference", "ml", "candle", "gguf", "transformers"]

[dependencies]
# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# ML
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
candle-flash-attn = { workspace = true, optional = true }
half = { workspace = true }
tokenizers = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { workspace = true }
criterion = { workspace = true }
safetensors = "0.6"
dirs = "5"

[[bench]]
name = "inference_bench"
harness = false

[target.'cfg(target_os = "macos")'.dependencies]
mlx-rs = { version = "0.25", optional = true, features = ["safetensors"] }
safetensors = { version = "0.6", optional = true }

[features]
default = ["cpu"]
cpu = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
flash-attn = ["cuda", "candle-flash-attn"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
mlx = ["mlx-rs", "safetensors"]
probe-safetensors = ["safetensors"]
