[package]
name = "kwaai-rag"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "RAG library for KwaaiNet — chunking, embedding, retrieval, and prompting"
publish = false

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
redb = "2"
sha2 = "0.10"
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = { version = "0.36", features = ["encoding"] }
tantivy = { workspace = true }
pdf-extract = { version = "0.10", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
pdf = ["pdf-extract"]
