[package]
name = "kwaai-storage"
version = "0.1.0"
edition = "2021"
description = "Multi-tenant vector storage fabric for KwaaiNet (Eve role)"
publish = false

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["json"] }
deadpool-postgres = { version = "0.14", features = ["serde"] }
pgvector = { version = "0.4", features = ["postgres"] }
postgres-types = { version = "0.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
