[package]
name = "kwaai-storage"
version = "0.1.0"
edition = "2021"
description = "Multi-tenant vector storage fabric for KwaaiNet (Eve role) — embedded, zero deps"
publish = false

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
hnsw_rs = "0.3"
redb = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[[example]]
name = "vector_search_bench"
path = "examples/vector_search_bench.rs"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
